<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.attestation.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.attestation.collections.CollectionsFragment"
        android:label="@string/title_collection"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.attestation.account.AccountFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/feedPhotoDetails"
        android:name="com.example.attestation.feed.FeedPhotoDetails"
        android:label="fragment_feed_photo_details"
        tools:layout="@layout/fragment_feed_photo_details" />
    <fragment
        android:id="@+id/collectionsDetails"
        android:name="com.example.attestation.collections.CollectionsDetails"
        android:label="fragment_collections_details"
        tools:layout="@layout/fragment_collections_details" />
</navigation>